Fixed vertical alignment after 4 frigging hours

--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -1,3 +1,29 @@
-.page3-description {
+ .page3-description {
 	text-align: center;
 }
+
+.parent {
+	display: table;
+    table-layout: fixed;
+}
+
+.child-left {
+	display:table-cell;
+    vertical-align:middle;
+    float: none;
+}
+
+.child-right {
+	display: table-cell;
+	float: none;
+}
+
+.child-left img {
+	width: 100%;
+	max-height: 100%;
+	max-width: 400px;
+
+	display: block;
+	margin: 0 auto;
+}
+
