--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,40 +1,39 @@
 .home-description {
-	color: #54697E;
 	padding-top: 50px;
 	padding-bottom: 50px;
 	text-align: center;
+
+	color: #337ab8;
+
+}
+
+.home-description h1 {
+	color: #54697E;
 }
 
 .home-description h3 {
-	color: black;
+	color: #337ab8;
 }
 
-/* Somewhere margin was set to 15px and caused horizontal scrolling */
-.row {
-	margin: 0;
+.about-description h3 {
+	color: #54697E;
 }
 
-.image-container {
-	/*padding-top: 50px;
-	padding-left: 50px;
-	padding-bottom: 50px;*/
-
-	/* Center the image */
-	/*display: block;
-	margin-left: auto;
-	margin-right: auto;*/
+.parent {
+	display: table;
+    table-layout: fixed;
 }
 
-/*.image-container img {
-	width: 100%;
-	max-height: 100%;
-	max-width: 400px; */
+.child-left {
+	display:table-cell;
+    vertical-align:middle;
+    float: none;
+}
 
-	/* Center horizontally */
-	/*display: block;
-	margin-left: auto;
-	margin-right: auto;
-}*/
+.child-right {
+	display: table-cell;
+	float: none;
+}
 
 .child img {
 	width: 100%;
